2009-02-26  Stefan Kost  <ensonic@users.sf.net>

	* doc/gtkdoc.dot:
	  Improve. scan only checks headers, while mkdb scans sources and
	  headers.

	* examples/Makefile.am:
	  Document more variables.

2009-02-26  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-scangobj.in:
	* gtkdoc-scanobj.in:
	  There is some gtk specific stuff there, which we probably want to kick
	  out. No one else gets such a treatment.

2009-02-26  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.xsl:
	* style.css:
	* gtkdoc-mkdb.in:
	  Fix annotation more. Refactor the extra-link feature. Still disabled
	  by default. Needs configure stuff next.

2009-02-24  Stefan Kost  <ensonic@users.sf.net>

	reviewed by: <delete if not using a buddy>
	patch by: <delete if not someone else's patch>

	* gtkdoc-mkpdf.in:
	* gtkdoc-scangobj.in:
	* gtkdoc-scanobj.in:

2009-02-24  Stefan Kost  <ensonic@users.sf.net>

	patch by: Paolo Borelli <pborelli@katamail.com>

	* gtkdoc-scangobj.in:
	* gtkdoc-scanobj.in:
	  Use g_strerror. Fixes #572967.

2009-02-23  Sven Herzberg  <herzi@gnome-de.org>

	Fixes 571820 - gobject.c: pspec_pool not initialized for interfaces

	Initialize GObjectClass before referencing interfaces.

	* gtkdoc-scangobj.in: keep a reference on the GObjectClass while
	peeking in interfaces' properties

2009-02-23  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Don't use named entities.

2009-02-23  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc-single.xsl:
	  Starting point for generating single page html. Needs refactoring with
	  gtk-doc.xsl (common stuff into gtk-doc-html.xsl).

2009-02-23  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  With fop-0.94 it works actually, while 0.95 seesm to have the
	  exceptions.

	* gtkdoc-mkpdf.in:
	  Fix var reference.

2009-02-22  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* gtkdoc-mkdb.in:
	  Prototype an idea.

2009-02-22  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.am:
	  Dist more files.

	* configure.in:
	  Update status.
